<resources>
    <string name="app_name">MiripGojek</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_chat">Chat</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_account">Account</string>
    <string name="go">GO</string>
    <string name="search">Search</string>
    <string name="rp_90_000">Rp.90.000</string>
    <string name="Judul">title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
