<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_motorcycle_black_24dp"
        android:title="@string/title_order" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/ic_inbox_black_24dp"
        android:title="@string/title_inbox" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_supervisor_account_black_24dp"
        android:title="@string/title_account" />

</menu>
